# AeroGestor

./: CMakeLists.txt.cgrzuL  README.md  loginWindow.h  main.cpp  mainwindow.h  manager.h
cmake/: CMakeLists.txt
docs/: README.md
include/: admin.h  authSystem.h  user.h
interfaces/: admin_interface.h  manager_interface.h  mechanic_interface.h
resources/: AeroGestor_pt_BR.ts
src/: admin.cpp  aeronave.cpp  authSystem.cpp  loginWindow.cpp  main.cpp  mainmenu.cpp  mainwindow.cpp  manager.cpp  mechanic.cpp
ui/: mainmenu.ui  mainwindow.ui
